# RP25_Robot_Programming

./: .gitignore
.claude/: settings.local.json
src/action_exam/: CMakeLists.txt  package.xml
src/gazebo_exam/: CLAUDE.md  CMakeLists.txt  package.xml
src/gazebo_exam/controller/: fr3_controller_gripper.yaml
src/gazebo_exam/docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  COMPREHENSIVE.md  EXERCISES.md  LAUNCH_FILES.md  MOVEIT_CONFIG.md  README.md  ROBOT_MODEL.md
src/gazebo_exam/launch/: display_franka.launch.py  gazebo_franka.launch.py  moveit2_franka.launch.py  moveit2_practice.launch.py  step1_practice.launch.py  step1_practice_gazebo.launch.py  step2_hw.launch.py  step2_hw_gazebo.launch.py
src/gazebo_exam/models/: box_blue.xacro  box_red.xacro  case.dae  case.xacro  cylinder.xacro  triangle.xacro
src/gazebo_exam/src/: moveit2_practice_sample.cpp  step1_practice.cpp  step2_hw.cpp
src/gazebo_exam/srdf/: fr3.srdf.xacro  fr3_macro.srdf.xacro
src/gazebo_exam/urdf/end_effectors/franka_hand/: franka_hand.urdf.xacro  franka_hand_macro.xacro  franka_hand_ros2_control.xacro  inertials.yaml
src/gazebo_exam/urdf/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro  fr3_macro.xacro  fr3_ros2_control.xacro  fr3_transmission.xacro
src/gazebo_exam/urdf/robots/fr3/config/: initial_positions.yaml  kinematics.yaml  visual_parameters.yaml
src/gazebo_grasp_plugin/: CMakeLists.txt  package.xml
src/gazebo_grasp_plugin/include/gazebo_grasp_plugin/: GazeboGraspFix.h  GazeboGraspGripper.h
src/gazebo_grasp_plugin/src/: GazeboGraspFix.cpp  GazeboGraspGripper.cpp
src/mimic_plugin/: CMakeLists.txt  package.xml
src/mimic_plugin/src/: mimic_joint_plugin.cpp
src/moveit2_exam/: CMakeLists.txt  package.xml
src/moveit2_exam/controller/: fr3_controller.yaml
src/moveit2_exam/docs/: API_REFERENCE.md  CODEBASE_OVERVIEW.md  IMPLEMENTATION_COMPARISON.md  QUICK_REFERENCE.md  README.md
src/moveit2_exam/launch/: display_franka.launch.py  gazebo_franka.launch.py  moveit2_franka.launch.py  moveit2_practice.launch.py
src/moveit2_exam/moveit_config/: controllers_6dof_gripper.yaml  joint_limits_6dof_gripper.yaml  kinematics.yaml  ompl_planning.yaml
src/moveit2_exam/rviz/: moveit_franka.rviz
src/moveit2_exam/src/: moveit2_practice_sample.cpp
src/moveit2_exam/srdf/: fr3.srdf.xacro  franka_hand_macro.srdf.xacro
src/moveit2_exam/urdf/end_effectors/franka_hand/: franka_hand.urdf.xacro  franka_hand_macro.xacro
src/moveit2_exam/urdf/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro  fr3_macro.xacro
src/moveit2_exam/urdf/robots/fr3/config/: joint_limits.yaml  visual_parameters.yaml
src/pybullet_homework/: case_pick_and_place_blind.py
src/pybullet_homework/models/: box.xacro  box2.xacro  box3.xacro  box4.xacro  box6.xacro  case.xacro  cylinder1.xacro  triangle.dae  triangle.xacro
src/service_exam/: CMakeLists.txt  package.xml
src/service_exam/src/: service_exam_client.cpp  service_exam_server.cpp
src/tf_exam/: CMakeLists.txt  package.xml
src/tf_exam/src/: tf_exam_broadcaster.cpp  tf_exam_listener.cpp
src/urdf_exam/: CMakeLists.txt  package.xml
src/urdf_exam/launch/: urdf_exam.launch.py
src/urdf_exam/rviz/: urdf.rviz
src/urdf_exam/urdf/: my_robot.urdf  my_robot.xacro  my_robot2.urdf  my_robot3.gv  my_robot3.urdf  my_robot4.urdf  my_robot_macro.xacro
